--- a/LinkHubUI/LinkHubUI/Areas/Common/Views/BrowseURL/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Common/Views/BrowseURL/Index.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayFor(modelItem => item.UrlTitle)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Url)
+            <a href=@item.Url target="_blank">@item.Url</a>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UrlDesc)
