--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListUser/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListUser/Index.cshtml
@@ -1,7 +1,50 @@
-﻿
+﻿@model IEnumerable<BOL.tbl_User>
+
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>List Users</h2>
+<h2>List of Users</h2>
 
+<table class="table">
+    <tr>
+        <th>
+            @Html.ActionLink("UserEmail", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "UserEmail", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
+            @*@Html.DisplayNameFor(model => model.UserEmail)*@
+        </th>
+        <th>
+            @Html.ActionLink("Role", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "Role", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
+            @*@Html.DisplayNameFor(model => model.Role)*@
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.UserEmail)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Role)
+        </td>
+    </tr>
+}
+
+</table>
+
+@{
+    double totalPages = @ViewBag.TotalPages;
+}
+
+@for (int i = 1; i <= totalPages; i++)
+{
+    if (i == ViewBag.Page)
+    {
+        <b> @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "Title" : ViewBag.SortBy), Page = i })</b>
+    }
+    else
+    {
+        @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "Title" : ViewBag.SortBy), Page = i })
+    }
+}
