--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListCategory/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListCategory/Index.cshtml
@@ -1,7 +1,53 @@
-﻿
+﻿@model IEnumerable<BOL.tbl_Category>
+
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>List Category</h2>
+<h2>Category List</h2>
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.ActionLink("CategoryName", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "CategoryName", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
+            @*@Html.DisplayNameFor(model => model.CategoryName)*@
+        </th>
+        <th>
+            @Html.ActionLink("CategoryDesc", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "CategoryDesc", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
+            @*@Html.DisplayNameFor(model => model.CategoryDesc)*@
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.CategoryName)
+        </td>
+        <td>
+            
+            @Html.DisplayFor(modelItem => item.CategoryDesc)
+        </td>
+    </tr>
+}
+
+</table>
+
+@{
+    double totalPages = @ViewBag.TotalPages;
+}
+
+@for (int i = 1; i <= totalPages; i++)
+{
+    if (i == ViewBag.Page)
+    {
+        <b> @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "CategoryName" : ViewBag.SortBy), Page = i })</b>
+    }
+    else
+    {
+        @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "CategoryName" : ViewBag.SortBy), Page = i })
+    }
+}
+
 
