--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/Category/Index.cshtml
@@ -5,6 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/jquery.validate.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+
 <h2>Index</h2>
 
 @if(TempData["msg"]!=null){
