--- a/LinkHubUI/LinkHubUI/Areas/User/Views/URL/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/User/Views/URL/Index.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Index";
 }
 
+
+@if(TempData["msg"]!=null)
+{
+    <h3>
+        @TempData["msg"].ToString()
+    </h3>
+}
+
 <h2>Index</h2>
 
 
@@ -12,7 +20,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>tbl_Url</h4>
+        <h4>Submit Url Details</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -47,7 +55,7 @@
             </div>
         </div>
 
-        @*<div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
@@ -61,7 +69,7 @@
                 @Html.EditorFor(model => model.IsApproved, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.IsApproved, "", new { @class = "text-danger" })
             </div>
-        </div>*@
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
