Logout link is added.

--- a/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
+++ b/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     <li>@Html.ActionLink("BrowseURL", "Index", new { Controller = "BrowseURL", Area = "Common" })</li>
                     <li>@Html.ActionLink("ListUser", "Index", new { Controller = "ListUser", Area = "Admin" })</li>
                     <li>@Html.ActionLink("Login", "Index", new { Controller = "Login", Area = "Security" })</li>
+                    <li>@Html.ActionLink("Logout", "SignOut", new { Controller = "Login", Area = "Security" })</li>
                 </ul>
             </div>
         </div>
