Footer is modified.

--- a/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
+++ b/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
@@ -55,7 +55,11 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <blockquote class="pull-right">
+                <p>It does not matter how slowly you go as long as you do not stop.</p>
+                <small>By Mitesh <cite title="Source Title">[Software Developer]</cite></small>
+            </blockquote>
+            <p>&copy; @DateTime.Now.Year - LinkHub using Asp.Net MVC using Entity Framework</p>
         </footer>
     </div>
 
