--- a/LinkHubUI/LinkHubUI/Areas/User/Views/URL/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/User/Views/URL/Index.cshtml
@@ -5,11 +5,12 @@
 }
 
 
-@if(TempData["msg"]!=null)
+@if (TempData["msg"] != null)
 {
-    <h3>
+    <div class="alert alert-dismissable alert-info">
+        <button class="close" type="button" data-dismiss="alert">×</button>
         @TempData["msg"].ToString()
-    </h3>
+    </div>
 }
 
 <h2>Index</h2>
@@ -57,7 +58,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
