--- a/LinkHubUI/LinkHubUI/Areas/Security/Views/Register/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Security/Views/Register/Index.cshtml
@@ -10,11 +10,12 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 <h4>User Registration</h4>
 
-@if(TempData["msg"]!=null)
+@if (TempData["msg"] != null)
 {
-    <h4>
+    <div class="alert alert-dismissable alert-info">
+        <button class="close" type="button" data-dismiss="alert">×</button>
         @TempData["msg"].ToString()
-    </h4>
+    </div>
 }
 
 @using (Html.BeginForm("Create","Register",FormMethod.Post)) 
@@ -50,7 +51,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
