Panels are added for info purpose.

--- a/LinkHubUI/LinkHubUI/Areas/Common/Views/Home/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Common/Views/Home/Index.cshtml
@@ -4,4 +4,64 @@
 }
 
 <h2>Home</h2>
+<br />
+<br />
+<center>
+    <table>
+        <tr style="width:100%">
+            <td width="3%"></td>
+            <td width="30%">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">About Portal</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p align="justify">
+                            This is portal is all about sharing a link or url with the community which benifits both link owner and community.
+                            <br />
+                            <br />
+                            You can also share some commercial links that you want. Like offers, discounts, etc.,
+                            Do you have a link to share? Then <a href="/Security/Register">Register Here</a> and share it
+                        </p>
+                    </div>
+                </div>
+            </td>
+            <td width="3%"></td>
+            <td width="30%">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Technologies Used</h3>
+                    </div>
+                    <div class="panel-body">
+                       <p align="justify">
+                           This portal is purely developed on 3-layered architecture in VS2013 using the following technologies Asp.Net MVC, jQuery, BootStrap, C#.Net, Entity Framework and Ms Sql Server.
+                           <br />
+                           <br />
+                           Want to learn these technologies from scratch then contact <a href="#">here</a> to become fantastic developer and this is free! 
+
+                       </p> 
+                    </div>
+                </div>
+            </td>
+            <td width="3%"></td>
+            <td width="30%">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">About Developer</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p align="justify">
+                            This portal is developed by <a href="#">Mitesh</a> who has over 8+ years of software developement experience using all the industry cutting edge technology.
+                            Mitesh primary area of interest is Asp.Net MVC,Entity Framework,Sql.
+                            <br />
+                            <br />
+                            Do you really want to download this complete MVC application?<a href="#"> Click here.</a>
+                        </p>
+                        
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </table>
+</center>
 
