--- a/LinkHubUI/LinkHubUI/Areas/Common/Views/BrowseURL/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Common/Views/BrowseURL/Index.cshtml
@@ -8,10 +8,10 @@
 <h2>URLs</h2>
 
 
-<table class="table">
-    <tr>
+<table class="table table-striped table-bordered table-hover">
+    <tr class="info">
         <th>
-            @Html.ActionLink("UrlTitle", "Index", new {SortOrder=ViewBag.SortOrder==null?"Asc":(ViewBag.SortOrder=="Asc"?"Desc":"Asc"),SortBy="Title",page=(ViewBag.Page==null?"1":ViewBag.Page) })
+            @Html.ActionLink("UrlTitle", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "Title", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
             @*@Html.DisplayNameFor(model => model.UrlTitle)*@
         </th>
         <th>
@@ -22,33 +22,32 @@
             @Html.ActionLink("UrlDesc", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "UrlDesc", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
             @*@Html.DisplayNameFor(model => model.UrlDesc)*@
         </th>
-       
+
         <th>
             @Html.ActionLink("CategoryName", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "Category", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
             @*@Html.DisplayNameFor(model => model.tbl_Category.CategoryName)*@
         </th>
-       
-        <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UrlTitle)
-        </td>
-        <td>
-            <a href=@item.Url target="_blank">@item.Url</a>
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UrlDesc)
-        </td>
-       
-        <td>
-            @Html.DisplayFor(modelItem => item.tbl_Category.CategoryName)
-        </td>
-       
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UrlTitle)
+            </td>
+            <td>
+                <a href=@item.Url target="_blank">@item.Url</a>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UrlDesc)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.tbl_Category.CategoryName)
+            </td>
+
+        </tr>
+    }
 
 </table>
 
@@ -56,14 +55,21 @@
     double totalPages = @ViewBag.TotalPages;
 }
 
-@for(int i=1;i<=totalPages;i++)
-{
-    if(i == ViewBag.Page)
-    {
-       <b> @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "Title" : ViewBag.SortBy), Page = i })</b>
-    }
-    else 
-    { 
-        @Html.ActionLink(i.ToString()+" ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder),SortBy=(ViewBag.SortBy==null?"Title":ViewBag.SortBy),Page=i})
-    }
-}
+<ul class="pagination">
+
+        @for (int i = 1; i <= totalPages; i++)
+        {
+            if (i == ViewBag.Page)
+            {
+                <li class="active">
+                    @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "Title" : ViewBag.SortBy), Page = i })</li >
+            }
+            else
+            {
+               <li> @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "Title" : ViewBag.SortBy), Page = i })</li>
+            }
+        }
+</ul>
+
+
+
