--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/Category/Index.cshtml
@@ -11,10 +11,12 @@
 
 <h2>Index</h2>
 
-@if(TempData["msg"]!=null){
-    <h4>
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-dismissable alert-info">
+        <button class="close" type="button" data-dismiss="alert">×</button>
         @TempData["msg"].ToString()
-    </h4>
+    </div>
 }
 
 @using (Html.BeginForm("Create","Category",FormMethod.Post)) 
@@ -28,7 +30,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CategoryName, new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -36,19 +38,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryDesc, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CategoryDesc, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CategoryDesc, new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.CategoryDesc, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
