--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListUser/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListUser/Index.cshtml
@@ -7,8 +7,8 @@
 
 <h2>List of Users</h2>
 
-<table class="table">
-    <tr>
+<table class="table table-striped table-bordered table-hover">
+    <tr class="info">
         <th>
             @Html.ActionLink("UserEmail", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "UserEmail", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
             @*@Html.DisplayNameFor(model => model.UserEmail)*@
@@ -17,19 +17,20 @@
             @Html.ActionLink("Role", "Index", new { SortOrder = ViewBag.SortOrder == null ? "Asc" : (ViewBag.SortOrder == "Asc" ? "Desc" : "Asc"), SortBy = "Role", page = (ViewBag.Page == null ? "1" : ViewBag.Page) })
             @*@Html.DisplayNameFor(model => model.Role)*@
         </th>
-        <th></th>
+        
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserEmail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Role)
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserEmail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Role)
+            </td>
+        </tr>
+    }
 
 </table>
 
@@ -37,14 +38,23 @@
     double totalPages = @ViewBag.TotalPages;
 }
 
-@for (int i = 1; i <= totalPages; i++)
-{
-    if (i == ViewBag.Page)
-    {
-        <b> @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "UserEmail" : ViewBag.SortBy), Page = i })</b>
-    }
-    else
-    {
-        @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "UserEmail" : ViewBag.SortBy), Page = i })
-    }
-}
+<ul class="pagination">
+        @for (int i = 1; i <= totalPages; i++)
+        {
+            if (i == ViewBag.Page)
+            {
+                <li class="active"> @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "UserEmail" : ViewBag.SortBy), Page = i })</li>
+
+            }
+            else
+            {
+                <li> @Html.ActionLink(i.ToString() + " ", "Index", new { SortOrder = (ViewBag.SortOrder == null ? "Asc" : ViewBag.SortOrder), SortBy = (ViewBag.SortBy == null ? "UserEmail" : ViewBag.SortBy), Page = i })</li>
+            }
+        }
+    
+    
+</ul>
+
+
+
+
