--- a/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
+++ b/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", new {Controller="Home",Area="Common" })</li>
                     <li>@Html.ActionLink("BrowseURL", "Index", new { Controller = "BrowseURL", Area = "Common" })</li>
-                   
+                    <li>@Html.ActionLink("QuickURLSubmit", "Index", new { Controller = "QuickURLSubmit", Area = "Common" })</li>
+
                     @if (User.Identity.IsAuthenticated) 
                     { 
                         if (User.IsInRole("A"))
