--- a/LinkHubUI/LinkHubUI/Areas/Common/Views/Home/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Common/Views/Home/Index.cshtml
@@ -6,13 +6,21 @@
 <h2>Home</h2>
 <br />
 <br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <center>
     <table>
         <tr style="width:100%">
             <td width="3%"></td>
             <td width="30%">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
+                    <div class="panel-heading navbar-inverse">
                         <h3 class="panel-title">About Portal</h3>
                     </div>
                     <div class="panel-body">
@@ -29,7 +37,7 @@
             <td width="3%"></td>
             <td width="30%">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
+                    <div class="panel-heading navbar-inverse">
                         <h3 class="panel-title">Technologies Used</h3>
                     </div>
                     <div class="panel-body">
@@ -46,7 +54,7 @@
             <td width="3%"></td>
             <td width="30%">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
+                    <div class="panel-heading navbar-inverse">
                         <h3 class="panel-title">About Developer</h3>
                     </div>
                     <div class="panel-body">
