--- a/LinkHubUI/LinkHubUI/Areas/Security/Views/Login/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Security/Views/Login/Index.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@*<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/jquery.validate.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>*@
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 <h4>SignIn Here</h4>
 @if (TempData["msg"] != null)
 {
