--- a/LinkHubUI/LinkHubUI/Areas/Security/Views/Login/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Security/Views/Login/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BOL.tbl_User
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/jquery-1.10.2.js"></script>
