View page title is modified.

--- a/LinkHubUI/LinkHubUI/Areas/Security/Views/Register/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Security/Views/Register/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BOL.tbl_User
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
