View page title is modified.

--- a/LinkHubUI/LinkHubUI/Areas/Common/Views/BrowseURL/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Common/Views/BrowseURL/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BOL.tbl_Url>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "BrowseURL";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
