View page title is modified.

--- a/LinkHubUI/LinkHubUI/Areas/Common/Views/QuickURLSubmit/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Common/Views/QuickURLSubmit/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BOL.QuickURLSubmitModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "QuickURLSubmit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
