--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/ApprovedURLs/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/ApprovedURLs/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BOL.tbl_Url>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ApprovedUrls";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
