--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BOL.tbl_Category
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Category";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
