--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListCategory/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListCategory/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BOL.tbl_Category>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "CategoryList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script>
