View page title is modified.

--- a/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListUser/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Admin/Views/ListUser/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BOL.tbl_User>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "UserList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
