View page title is modified.

--- a/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
+++ b/LinkHubUI/LinkHubUI/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - UrlHub Apps</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("LinkHub", "Index", "Home", new { Area = "Common" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("UrlHub", "Index", "Home", new { Area = "Common" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -76,7 +76,7 @@
                 <p>It does not matter how slowly you go as long as you do not stop.</p>
                 <small>By Mitesh <cite title="Source Title">[Software Developer]</cite></small>
             </blockquote>
-            <p>&copy; @DateTime.Now.Year - LinkHub using Asp.Net MVC using Entity Framework</p>
+            <p>&copy; @DateTime.Now.Year - UrlHub using Asp.Net MVC using Entity Framework</p>
         </footer>
     </div>
 
