--- a/LinkHubUI/LinkHubUI/Areas/Common/Views/Home/Index.cshtml
+++ b/LinkHubUI/LinkHubUI/Areas/Common/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Home";
 }
 
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <h2>Home</h2>
 <br />
 <br />
@@ -10,6 +14,15 @@
 <br />
 <br />
 <br />
+
+
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-dismissable alert-info">
+        <button class="close" type="button" data-dismiss="alert">×</button>
+        &nbsp;&nbsp;&nbsp;&nbsp;@TempData["msg"].ToString()
+    </div>
+}
 <br />
 <br />
 <br />
